--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta charset="UTF-8">
         <meta name="description" Content="...">
         <meta name="viewport" Content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="...">
+        <link rel="stylesheet" href="css/index.css">
         <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon.png">
         <script src="https://kit.fontawesome.com/87671af21f.js" crossorigin="anonymous"></script>
     </head>
