--- a/index.html
+++ b/index.html
@@ -14,12 +14,13 @@
         <link rel="stylesheet" href="css/index.css">
 
         <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon.png">
-        
+
         <script src="https://kit.fontawesome.com/87671af21f.js" crossorigin="anonymous"></script>
     </head>
 
     <body>
         <header>
+            <a img href="..." alt=""></a>
         </header>
        
         <main> 
