Mobile first approach, started with main page.

--- a/index.html
+++ b/index.html
@@ -20,11 +20,13 @@
 
     <body>
         <header>
-            <a img href="..." alt=""></a>
         </header>
        
         <main> 
             <h1>Community science museum</h1>
+            <div class="container">
+                <img src="assets/ABF404CC-25BA-4C87-B509-F059DD409383_1_201_a.jpg" alt="...">
+            </div>
             <p>Welcome to community science museum</p>
         </main>
        
