Filled in index.html, almost finished with cards.

--- a/index.html
+++ b/index.html
@@ -27,7 +27,6 @@
             <label for="menue-checkbox" class="hamburger-icon" aria-label="Open navigation mobile"><i class="fas fa-bars fa"></i></label>
             <input type="checkbox" name="menue-checkbox" id="menue-checkbox">
 
-
             <nav>
                 <a href="index.html">Home</a>
                 <a href="#">About</a>
@@ -50,8 +49,70 @@
                     <span>museum</span>
                 </h1>            
             </section>
+
+            <section>
+                <h2>Special events</h2>
+                <div class="card">
+                    <div class="card-container">
+                        <img src="./assets/roberto-nickson-396152.jpg" alt="">
+                    </div>
+                    <h3>Night at the museum</h3>
+                    <a href="#" class="cta-button">Go to events</a>
+                </div>
+            </section>
+
+            <section>
+                <h2>Explore</h2>
+
+                <div class="explore-card">
+                    <div class="explore-card-container">
+                        <img src="./assets/DALL·E 2024-11-23 09.08.33 - Two children at a museum, exploring exhibits with curiosity and joy. One child is pointing at a dinosaur skeleton while the other looks amazed. The mu-2.webp" alt="">
+                    </div>
+                    <a href="#" class="cta-button">Kids</a>
+                </div>
+
+                <div class="explore-card">
+                    <div class="explore-card-container">
+                        <img src="./assets/DALL·E 2024-11-23 09.14.09 - A museum scene featuring a teacher guiding a group of children on a field trip. The teacher, an enthusiastic adult, is explaining an exhibit about anc-2.webp" alt="">
+                    </div>
+                    <a href="#" class="cta-button">Teachers</a>
+                </div>
+
+                <div class="explore-card"></div>
+                    <div class="explore-card-container">
+                        <img src="./assets/DALL·E 2024-11-28 13.23.50 - A female researcher in a museum examining an exhibit on health under a spotlight in a dimly lit exhibit hall. The researcher is wearing a lab coat and-2.webp" alt="">
+                    </div>
+                    <a href="#" class="cta-button">Researchers</a>
+                </div>
+            </section>
+
+            <section>
+                <h2>Exhibition</h2>
+                <div class="card">
+                    <div class="card-container">
+                        <img src="./assets/toa-heftiba-412579.jpg" alt="">
+                    </div>
+                    <h3>Title</h3>
+                    <a href="#" class="cta-button">Go to exhibitions</a>
+                </div>
+            </section>
+
+            <section>
+                <h2>Visit</h2>
+                <h3>Opening hours</h3>
+                    <p>Monday: Closed</p>
+                    <p>Tuesday: 10:00 – 16:00</p>
+                    <p>Wednesday: 10:00 – 16:00</p>
+                    <p>Thursday: 10:00 – 16:00</p>
+                    <p>Friday: 10:00 – 19:00</p>
+                    <p>Saturday: 9:00 – 16:00</p>
+                    <p>Sunday: 9:00 – 13:00</p>
+                <h3>Location</h3>
+                    <p>Kjelsåsveien 14</p>
+                    <p>30491 Oslo</p>
+                    <img src="" alt="">
+            </section>
            
-            <p>Welcome to community science museum</p>
         </main>
        
         <footer>
