Added cta button to header, needs styling.

--- a/index.html
+++ b/index.html
@@ -47,8 +47,10 @@
                     <span>Community</span>
                     <span>science</span>
                     <span>museum</span>
-                </h1>            
+                </h1>  
             </section>
+            
+            <a href="#" class="cta-button">Go to events</a>
 
             <section>
                 <h2>Special events</h2>
