--- a/contact-us.html
+++ b/contact-us.html
@@ -43,6 +43,16 @@
        
         <main> 
            <h1>Contact us</h1>
+           <p>We’re here to help! Got questions, need support, or want to share feedback? Reach out to us anytime—we’d love to hear from you!  </p>
+           <p>Email: [your-email@example.com]</p>
+           <p>Facebook: [Your Facebook Page]</p>
+           <p>Instagram: [@YourInstagramHandle]</p>
+           <p>Let’s connect!</p>
+
+           <section>
+                <p>FORM</p>
+           </section>
+           <a href="" class="cta-button">Send message</a>
         </main>
        
         <footer>
