--- a/events.html
+++ b/events.html
@@ -42,7 +42,31 @@
         </header>
        
         <main> 
-           <h1>Events</h1>
+            <h1>Upcoming events</h1>
+            <section>
+                <img src="" alt="">
+                <h2>Night in the museum</h2>
+                <p>Get your family together for an exciting night in the museum as you sleep over beside dinosaurs and science displays. Bring your own sleeping bag and get ready to rough it as we go exploring the wonders of science.</p>
+                <a href="" class="cta-button">Buy tickets</a>
+            </section>
+            <section>
+                <h2>Whats happening this week - 50</h2>
+                <section>
+                    <h3>Friday</h3>
+                    <h4>Visiting Professor of Aeronautics</h4>
+                    <img src="" alt="">
+                    <p>It is our pleasure to announce that Prof Sheila Widnall from the Massachusetts Institute of Technology will be delivering 3 lectures on the development of aeronautics and where the future lies in this exciting ‘space’.</p>
+                    <a href="" class="cta-button">Buy tickets</a>
+                </section>
+                <section>
+                    <h3>Sunday</h3>
+                    <h4>Energetica Exhibition on Loan</h4>
+                    <img src="" alt="">
+                    <p>On loan from the NEMO Science Museum in Amsterdam, the Energetica exhibition is coming to the Community Science Museum. It’s a series of installations that allow visitors to experience the power of the elements as we harness them. From solar energy powering lighting, to ‘Wind Island’ that shows how turbines are able to use and control wind to create power.</p>
+                    <a href="" class="cta-button">Buy tickets</a>
+                </section>
+            </section>
+
         </main>
        
         <footer>
