Added content to the rest of the html pages

--- a/check-out-success.html
+++ b/check-out-success.html
@@ -42,7 +42,10 @@
         </header>
        
         <main> 
-           <h1>Checkout success</h1>
+            <h1>Checkout success</h1>
+            <h2>Order number: #12345</h2>
+            <h2>Thank you for your order!</h2>
+            <a href="" class="cta-button">Order summary</a>
         </main>
        
         <footer>
