--- a/order-summary.html
+++ b/order-summary.html
@@ -42,7 +42,30 @@
         </header>
        
         <main> 
-           <h1>Order summary</h1>
+            <h1>Order summary</h1>
+            <section>
+                    <p>Guided tours</p>
+                    <p>Kids</p>
+                    <p>Adults</p>
+                    <p>Price</p>
+                    <p>Tickets</p>
+                    <p>1</p>
+                    <p>2</p>
+                    <p>$20</p>
+            </section>
+            <section>
+                    <p>Night at the museum</p>
+                    <p>Kids</p>
+                    <p>Adults</p>
+                    <p>Price</p>
+                    <p>Tickets</p>
+                    <p>1</p>
+                    <p>2</p>
+                    <p>$20</p>
+                </section>
+                <p>Price in total</p>
+                <p>$40</p>
+            <a href="" class="cta-button">Go to exhibitions</a>
         </main>
        
         <footer>
