--- a/tickets.html
+++ b/tickets.html
@@ -43,6 +43,63 @@
        
         <main> 
            <h1>Tickets</h1>
+
+           <h2>Pricing guided tours</h2>
+           <p>Kids (under 18 years)</p>
+           <p>Students</p>
+           <p>Adults</p>
+
+           <p>Free</p>
+           <p>$5</p>
+           <p>$10</p>
+
+            <!--Ticket buttons-->
+
+            <a href="" class="cta-button">Buy tickets</a>
+
+            <Section>
+                <h2>Book special events</h2>
+                <section>
+                    <img src="" alt="">
+                    <h3>Night in the museum</h3>
+                    <h4>Desember 20 2024</h4>
+                    <p>Kids (under 18 years)</p>
+                    <p>Students</p>
+                    <p>Adults</p>
+                    <p>Free</p>
+                    <p>$5</p>
+                    <p>$10</p>
+                    <!--Ticket buttons-->
+                    <a href="" class="cta-button">Buy tickets</a>
+                </section>
+                <section>
+                    <img src="" alt="">
+                    <h3>Professor of aeronautics</h3>
+                    <h4>Desember 13 2024</h4>
+                    <p>Kids (under 18 years)</p>
+                    <p>Students</p>
+                    <p>Adults</p>
+                    <p>Free</p>
+                    <p>$5</p>
+                    <p>$10</p>
+                    <!--Ticket buttons-->
+                    <a href="" class="cta-button">Buy tickets</a>
+                </section>
+                <section>
+                    <img src="" alt="">
+                    <h3>Energetica Exhibition on Loan</h3>
+                    <h4>Desember 15 2024</h4>
+                    <p>Kids (under 18 years)</p>
+                    <p>Students</p>
+                    <p>Adults</p>
+                    <p>Free</p>
+                    <p>$5</p>
+                    <p>$10</p>
+                    <!--Ticket buttons-->
+                    <a href="" class="cta-button">Buy tickets</a>
+                </section>
+            </Section>
+
         </main>
        
         <footer>
