--- a/order-summary.html
+++ b/order-summary.html
@@ -11,7 +11,7 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=MuseoModerno:ital,wght@0,100..900;1,100..900&family=Roboto+Serif:ital,opsz,wght@0,8..144,100..900;1,8..144,100..900&display=swap" rel="stylesheet">
 
-        <link rel="stylesheet" href="css/index.css">
+        <link rel="stylesheet" href="css/order-summary.css">
 
         <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon.png">
 
@@ -29,13 +29,9 @@
             <input type="checkbox" name="menue-checkbox" id="menue-checkbox">
             <nav>
                 <a href="index.html">Home</a>
-                <a href="about.html">About</a>
                 <a href="explore.html">Explore</a>
                 <a href="exhibitions.html">Exhibition</a>
                 <a href="events.html">Events</a>                
-                <a href="contact-us.html">Contact</a>
-                <a href="visit.html">Visit</a>
-                <a href="get-involved.html">Get involved</a>
                 <a href="tickets.html">Tickets</a>
                 <a href="cart.html">Cart</a>
             </nav>
@@ -43,33 +39,62 @@
        
         <main> 
             <h1>Order summary</h1>
-            <section>
-                    <p>Guided tours</p>
-                    <p>Kids</p>
-                    <p>Adults</p>
-                    <p>Price</p>
-                    <p>Tickets</p>
-                    <p>1</p>
-                    <p>2</p>
-                    <p>$20</p>
-            </section>
-            <section>
-                    <p>Night at the museum</p>
-                    <p>Kids</p>
-                    <p>Adults</p>
-                    <p>Price</p>
-                    <p>Tickets</p>
-                    <p>1</p>
-                    <p>2</p>
-                    <p>$20</p>
-                </section>
-                <p>Price in total</p>
-                <p>$40</p>
+            <table>
+                <thead>
+                    <tr>
+                        <th>Guided tours</th>
+                        <th>Tickets</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>Kids</td>
+                        <td>1</td>
+                    </tr>
+                    <tr>
+                        <td>Adults</td>
+                        <td>2</td>
+                    </tr>
+                    <tr>
+                        <td>Price</td>
+                        <td>$20</td>
+                    </tr>
+                </tbody>
+                <thead>
+                    <tr>
+                        <th>Night in the museum</th>
+                        <th>Tickets</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>Kids</td>
+                        <td>1</td>
+                    </tr>
+                    <tr>
+                        <td>Adults</td>
+                        <td>2</td>
+                    </tr>
+                    <tr>
+                        <td>Price</td>
+                        <td>$20</td>
+                    </tr>
+                </tbody>
+                <thead>
+                    <tr>
+                        <th>Price in total</th>
+                        <th>$40</th>
+                    </tr>
+                </thead>
+            </table>
             <a href="" class="cta-button">Go to exhibitions</a>
         </main>
        
         <footer>
-            <p>Copyright &copy;</p>
+            <a href="about.html">About</a>
+            <a href="contact-us.html">Send us a message</a>
+            <a href="get-involved.html">Get involved</a>
+            <a href="visit.html">Visit</a>
         </footer>
 
     </body>
