--- a/about.html
+++ b/about.html
@@ -11,7 +11,7 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=MuseoModerno:ital,wght@0,100..900;1,100..900&family=Roboto+Serif:ital,opsz,wght@0,8..144,100..900;1,8..144,100..900&display=swap" rel="stylesheet">
 
-        <link rel="stylesheet" href="css/index.css">
+        <link rel="stylesheet" href="css/about.css">
 
         <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon.png">
 
@@ -29,13 +29,9 @@
             <input type="checkbox" name="menue-checkbox" id="menue-checkbox">
             <nav>
                 <a href="index.html">Home</a>
-                <a href="about.html">About</a>
                 <a href="explore.html">Explore</a>
                 <a href="exhibitions.html">Exhibition</a>
                 <a href="events.html">Events</a>                
-                <a href="contact-us.html">Contact</a>
-                <a href="visit.html">Visit</a>
-                <a href="get-involved.html">Get involved</a>
                 <a href="tickets.html">Tickets</a>
                 <a href="cart.html">Cart</a>
             </nav>
@@ -51,7 +47,10 @@
         </main>
        
         <footer>
-            <p>Copyright &copy;</p>
+            <a href="about.html">About</a>
+            <a href="contact-us.html">Send us a message</a>
+            <a href="get-involved.html">Get involved</a>
+            <a href="visit.html">Visit</a>
         </footer>
 
     </body>
