--- a/cart.html
+++ b/cart.html
@@ -11,7 +11,7 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=MuseoModerno:ital,wght@0,100..900;1,100..900&family=Roboto+Serif:ital,opsz,wght@0,8..144,100..900;1,8..144,100..900&display=swap" rel="stylesheet">
 
-        <link rel="stylesheet" href="css/index.css">
+        <link rel="stylesheet" href="css/cart.css">
 
         <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon.png">
 
@@ -29,13 +29,9 @@
             <input type="checkbox" name="menue-checkbox" id="menue-checkbox">
             <nav>
                 <a href="index.html">Home</a>
-                <a href="about.html">About</a>
                 <a href="explore.html">Explore</a>
                 <a href="exhibitions.html">Exhibition</a>
                 <a href="events.html">Events</a>                
-                <a href="contact-us.html">Contact</a>
-                <a href="visit.html">Visit</a>
-                <a href="get-involved.html">Get involved</a>
                 <a href="tickets.html">Tickets</a>
                 <a href="cart.html">Cart</a>
             </nav>
@@ -44,37 +40,86 @@
         <main> 
            <h1>Cart</h1>
            <h2>Order summary</h2>
-           <section>
-                <p>Guided tours</p>
-                <p>Kids</p>
-                <p>Adults</p>
-                <p>Price</p>
-                <p>Tickets</p>
-                <p>1</p>
-                <p>2</p>
-                <p>$20</p>
-           </section>
-           <section>
-                <p>Night at the museum</p>
-                <p>Kids</p>
-                <p>Adults</p>
-                <p>Price</p>
-                <p>Tickets</p>
-                <p>1</p>
-                <p>2</p>
-                <p>$20</p>
-            </section>
-            <p>Price in total</p>
-            <p>$40</p>
+           <table>
+                <thead>
+                    <tr>
+                        <th>Guided tours</th>
+                        <th>Tickets</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>Kids</td>
+                        <td>1</td>
+                    </tr>
+                    <tr>
+                        <td>Adults</td>
+                        <td>2</td>
+                    </tr>
+                    <tr>
+                        <td>Price</td>
+                        <td>$20</td>
+                    </tr>
+                </tbody>
+                <thead>
+                    <tr>
+                        <th>Night in the museum</th>
+                        <th>Tickets</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>Kids</td>
+                        <td>1</td>
+                    </tr>
+                    <tr>
+                        <td>Adults</td>
+                        <td>2</td>
+                    </tr>
+                    <tr>
+                        <td>Price</td>
+                        <td>$20</td>
+                    </tr>
+                </tbody>
+                <thead>
+                    <tr>
+                        <th>Price in total</th>
+                        <th>$40</th>
+                    </tr>
+                </thead>
+            </table>
            
            <h2>Contact and billing details</h2>
             <!--Form-->
-            <a href="" class="cta-button">Confirm order</a>
+            <form class="form">
+                <fieldset>
+                    <label for="name">Full name</label>
+                    <input type="text" name="name" id="name" class="form__input" required>
+                    <label for="email">Email</label>
+                    <input type="email" name="email" id="email" class="form__input" required>
+                    <label for="adress">Adress</label>
+                    <input type="adress" name="adress" id="adress" class="form__input" required>
+                    <label for="postalcode">Postal code</label>
+                    <input type="number" name="postalcode" id="postalcode" class="form__input" required>
+                    <label for="city">City</label>
+                    <input type="text" name="city" id="city" class="form__input" required>
+                    <label for="cardnumber">Cardnumber</label>
+                    <input type="number" name="cardnumber" id="cardnumber" class="form__input" required>
+                    <label for="expiry">Expiry</label>
+                    <input type="number" name="expiry" id="expiry" class="form__input" required>
+                    <label for="cvc">CVC</label>
+                    <input type="number" name="cvc" id="cvc" class="form__input" required>
+                </fieldset>
+                </form>
+            <a href="check-out-success.html" class="cta-button">Confirm order</a>
 
         </main>
        
         <footer>
-            <p>Copyright &copy;</p>
+            <a href="about.html">About</a>
+            <a href="contact-us.html">Send us a message</a>
+            <a href="get-involved.html">Get involved</a>
+            <a href="visit.html">Visit</a>
         </footer>
 
     </body>
