Updating meta title and description, alt text and cleaning up HTML.

--- a/order-summary.html
+++ b/order-summary.html
@@ -1,27 +1,26 @@
 <!doctype html>
 <html lang="en">
     <head>
-        <title>Community science museum</title>
+        <title>Order summary</title>
         <meta charset="UTF-8">
-        <meta name="description" Content="...">
+        <meta name="description" Content="Order summary">
         <meta name="viewport" Content="width=device-width, initial-scale=1">
-
-        <!--google font-->
+        <!--google fonts-->
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=MuseoModerno:ital,wght@0,100..900;1,100..900&family=Roboto+Serif:ital,opsz,wght@0,8..144,100..900;1,8..144,100..900&display=swap" rel="stylesheet">
-
+        <!--CSS-->
         <link rel="stylesheet" href="css/order-summary.css">
-
+        <!--Favicon-->
         <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon.png">
-
+        <!--Icons-->
         <script src="https://kit.fontawesome.com/87671af21f.js" crossorigin="anonymous"></script>
     </head>
 
     <body>
         <header>
             <a href="index.html" class="header-logo">
-                <img src="./assets/open-science-735787-removebg-preview-2.png" alt="">
+                <img src="./assets/open-science-735787-removebg-preview-2.png" alt="Logo of earth with a keyhole and galaxies around.">
             </a>
             <label for="menue-checkbox" class="hamburger-icon" aria-label="Open navigation mobile">
                 <i class="fas fa-bars fa"></i>
