--- a/about.html
+++ b/about.html
@@ -1,27 +1,26 @@
 <!doctype html>
 <html lang="en">
     <head>
-        <title>Community science museum</title>
+        <title>About</title>
         <meta charset="UTF-8">
-        <meta name="description" Content="...">
+        <meta name="description" Content="About Community Science Museum a museum accessible to all.">
         <meta name="viewport" Content="width=device-width, initial-scale=1">
-
-        <!--google font-->
+        <!--google fonts-->
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=MuseoModerno:ital,wght@0,100..900;1,100..900&family=Roboto+Serif:ital,opsz,wght@0,8..144,100..900;1,8..144,100..900&display=swap" rel="stylesheet">
-
+        <!--CSS-->
         <link rel="stylesheet" href="css/about.css">
-
+        <!--Favicon-->
         <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon.png">
-
+        <!--Icons-->
         <script src="https://kit.fontawesome.com/87671af21f.js" crossorigin="anonymous"></script>
     </head>
 
     <body>
         <header>
             <a href="index.html" class="header-logo">
-                <img src="./assets/open-science-735787-removebg-preview-2.png" alt="">
+                <img src="./assets/open-science-735787-removebg-preview-2.png" alt="Logo of earth with a keyhole and galaxies around.">
             </a>
             <label for="menue-checkbox" class="hamburger-icon" aria-label="Open navigation mobile">
                 <i class="fas fa-bars fa"></i>
@@ -40,15 +39,14 @@
         <main> 
            <h1>About us</h1>
            <section class="about__text">
-                <p>Come join us at the Community Science Museum where we're committed to making science accessible to all.</p>
+                <h2>Come join us at the Community Science Museum where we're committed to making science accessible to all.</h2>
                 <div class="card-container__about">
-                    <img src="./assets/open-science-735787.jpg" alt="">
+                    <img src="./assets/open-science-735787-removebg-preview-2.png" alt="Logo of earth with a keyhole and galaxies around.">
                 </div>
                 <p>Over the course of human history, science has developed from our early understanding of fire, wind, water, and earth to exploring everything from galaxies far away to the very building blocks of life itself.</p>
                 <p>The aim of our museum is to create a space where everyone can experience the wonders of our discoveries and perhaps even ignite a lifelong passion to continue the exploration of the world around us.</p>
                 <p>We believe science should not be confined to the textbook, but brought to live through exhibits. This is why we have over 1000 different exhibits on the many varied subjects of science to explore. Many of these exhibits are designed for you to interact with and play around to see science come to life (apart from the dinosaur exhibits - they only come to life at night when everyone's gone home).</p>
            </section>
-           
         </main>
        
         <footer>
