--- a/events.html
+++ b/events.html
@@ -1,27 +1,26 @@
 <!doctype html>
 <html lang="en">
     <head>
-        <title>Community science museum</title>
+        <title>Events</title>
         <meta charset="UTF-8">
-        <meta name="description" Content="...">
+        <meta name="description" Content="Upcoming events and whats happening at the museum this week.">
         <meta name="viewport" Content="width=device-width, initial-scale=1">
-
-        <!--google font-->
+        <!--google fonts-->
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=MuseoModerno:ital,wght@0,100..900;1,100..900&family=Roboto+Serif:ital,opsz,wght@0,8..144,100..900;1,8..144,100..900&display=swap" rel="stylesheet">
-
+        <!--CSS-->
         <link rel="stylesheet" href="css/events.css">
-
+        <!--Favicon-->
         <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon.png">
-
+        <!--Icons-->
         <script src="https://kit.fontawesome.com/87671af21f.js" crossorigin="anonymous"></script>
     </head>
 
     <body>
         <header>
             <a href="index.html" class="header-logo">
-                <img src="./assets/open-science-735787-removebg-preview-2.png" alt="">
+                <img src="./assets/open-science-735787-removebg-preview-2.png" alt="Logo of earth with a keyhole and galaxies around.">
             </a>
             <label for="menue-checkbox" class="hamburger-icon" aria-label="Open navigation mobile">
                 <i class="fas fa-bars fa"></i>
@@ -39,40 +38,35 @@
        
         <main> 
             <h1>Upcoming events</h1>
-
             <section class="card">
                 <div class="card-container">
-                    <img src="./assets/roberto-nickson-396152.jpg" alt="">
+                    <img src="./assets/roberto-nickson-396152.jpg" alt="Image of a mammut in a museum">
                 </div>
                 <h2>Night in the museum</h2>
                 <p>Get your family together for an exciting night in the museum as you sleep over beside dinosaurs and science displays. Bring your own sleeping bag and get ready to rough it as we go exploring the wonders of science.</p>
                 <a href="" class="cta-button">Buy tickets</a>
             </section>
-
             <section>
                 <h2>Whats happening this week - 50</h2>
-
                 <section class="card">
                     <h3>Friday</h3>
                     <h4>Visiting Professor of Aeronautics</h4>
                     <div class="card-container__small">
-                        <img src="./assets/celso-405219.jpg" alt="">
+                        <img src="./assets/celso-405219.jpg" alt="Image of the moon">
                     </div>
                     <p>It is our pleasure to announce that Prof Sheila Widnall from the Massachusetts Institute of Technology will be delivering 3 lectures on the development of aeronautics and where the future lies in this exciting ‘space’.</p>
                     <a href="" class="cta-button">Buy tickets</a>
                 </section>
-
                 <section class="card">
                     <h3>Sunday</h3>
                     <h4>Energetica Exhibition on Loan</h4>
                     <div class="card-container_small">
-                        <img src="./assets/scientific-2040795_1280.jpg" alt="">
+                        <img src="./assets/scientific-2040795_1280.jpg" alt="Image of a scientist looking at a reactor">
                     </div>
                     <p>On loan from the NEMO Science Museum in Amsterdam, the Energetica exhibition is coming to the Community Science Museum. It’s a series of installations that allow visitors to experience the power of the elements as we harness them. From solar energy powering lighting, to ‘Wind Island’ that shows how turbines are able to use and control wind to create power.</p>
                     <a href="" class="cta-button">Buy tickets</a>
                 </section>
             </section>
-
         </main>
        
         <footer>
