--- a/index.html
+++ b/index.html
@@ -1,27 +1,26 @@
 <!doctype html>
 <html lang="en">
     <head>
-        <title>Community science museum</title>
+        <title>Community Science Museum</title>
         <meta charset="UTF-8">
-        <meta name="description" Content="...">
+        <meta name="description" Content="Welcome to Community Science Museum">
         <meta name="viewport" Content="width=device-width, initial-scale=1">
-
-        <!--google font-->
+        <!--google fonts-->
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=MuseoModerno:ital,wght@0,100..900;1,100..900&family=Roboto+Serif:ital,opsz,wght@0,8..144,100..900;1,8..144,100..900&display=swap" rel="stylesheet">
-
+        <!--CSS-->
         <link rel="stylesheet" href="css/index.css">
-
+        <!--Favicon-->
         <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon.png">
-
+        <!--Icons-->
         <script src="https://kit.fontawesome.com/87671af21f.js" crossorigin="anonymous"></script>
     </head>
 
     <body>
         <header>
             <a href="index.html" class="header-logo">
-                <img src="./assets/open-science-735787-removebg-preview-2.png" alt="">
+                <img src="./assets/open-science-735787-removebg-preview-2.png" alt="Logo of earth with a keyhole and galaxies around.">
             </a>
             <label for="menue-checkbox" class="hamburger-icon" aria-label="Open navigation mobile">
                 <i class="fas fa-bars fa"></i>
@@ -45,94 +44,93 @@
                     <span>museum</span>
                 </h1>  
             </section>
-
             <a href="#" class="cta-button__header">Go to events</a>
 
             <h2>Special events</h2>
-            <section class="scroll-container">
-                <article class="card">
+            <div class="scroll-container">
+                <section class="card">
                     <div class="card-container">
-                        <img src="./assets/roberto-nickson-396152.jpg" alt="">
+                        <img src="./assets/roberto-nickson-396152.jpg" alt="Image of a mammut in a museum">
                     </div>
                     <h3>Night at the museum</h3>
                     <a href="#" class="cta-button">Go to events</a>
-                </article>
-                <article class="card">
+                </section>
+                <section class="card">
                     <div class="card-container">
-                        <img src="./assets/scientific-2040795_1280.jpg" alt="">
+                        <img src="./assets/scientific-2040795_1280.jpg" alt="Image of a scientist looking at a reactor">
                     </div>
                     <h3>Energetica exhibitions</h3>
                     <a href="#" class="cta-button">Go to events</a>
-                </article>
-                <article class="card">
+                </section>
+                <section class="card">
                     <div class="card-container">
-                        <img src="./assets/celso-405219.jpg" alt="">
+                        <img src="./assets/celso-405219.jpg" alt="Image of the moon">
                     </div>
                     <h3>Professor of Aeronautics</h3>
                     <a href="#" class="cta-button">Go to events</a>
-                </article>
-            </section>
+                </section>
+            </div>
 
             <section>
                 <h2>Explore</h2>
-                <article class="explore-card">
+                <section class="explore-card">
                     <div class="explore-card-container">
-                        <img src="./assets/DALL·E 2024-11-23 09.08.33 - Two children at a museum, exploring exhibits with curiosity and joy. One child is pointing at a dinosaur skeleton while the other looks amazed. The mu-2.webp" alt="">
+                        <img src="./assets/DALL·E 2024-11-23 09.08.33 - Two children at a museum, exploring exhibits with curiosity and joy. One child is pointing at a dinosaur skeleton while the other looks amazed. The mu-2.webp" alt="wo children at a museum, exploring exhibits with curiosity and joy. One child is pointing at a dinosaur skeleton while the other looks amazed.">
                     </div>
                     <a href="#" class="cta-button">Kids</a>
-                </article>
-                <article class="explore-card">
+                </section>
+                <section class="explore-card">
                     <div class="explore-card-container">
-                        <img src="./assets/DALL·E 2024-11-23 09.14.09 - A museum scene featuring a teacher guiding a group of children on a field trip. The teacher, an enthusiastic adult, is explaining an exhibit about anc-2.webp" alt="">
+                        <img src="./assets/DALL·E 2024-11-23 09.14.09 - A museum scene featuring a teacher guiding a group of children on a field trip. The teacher, an enthusiastic adult, is explaining an exhibit about anc-2.webp" alt="A museum scene featuring a teacher guiding a group of children on a field trip. The teacher, an enthusiastic adult, is explaining an exhibit">
                     </div>
                     <a href="#" class="cta-button">Teachers</a>
-                </article>
-                <article class="explore-card">
+                </section>
+                <section class="explore-card">
                     <div class="explore-card-container">
-                        <img src="./assets/mavis-cw-164128.jpg" alt="">
+                        <img src="./assets/mavis-cw-164128.jpg" alt="Image of a museum hall with study desks">
                     </div>
                     <a href="#" class="cta-button">Researchers</a>
-                </article>
+                </section>
             </section>
 
             <h2>Exhibition</h2>
-            <section class="scroll-container">
-                <article class="card">
+            <div class="scroll-container">
+                <section class="card">
                     <div class="card-container">
-                        <img src="./assets/toa-heftiba-412579.jpg" alt="">
+                        <img src="./assets/toa-heftiba-412579.jpg" alt="Image of a dinosaur skeleton in a big museum hall">
                     </div>
                     <h3>Evolution</h3>
                     <a href="#" class="cta-button">Go to exhibitions</a>
-                </article>
-                <article class="card">
+                </section>
+                <section class="card">
                     <div class="card-container">
-                        <img src="./assets/andrew-ruiz-348421.jpg" alt="">
+                        <img src="./assets/andrew-ruiz-348421.jpg" alt="Image of an astronaut in a spaceship">
                     </div>
                     <h3>Cosmology</h3>
                     <a href="#" class="cta-button">Go to exhibitions</a>
-                </article>
-                <article class="card">
+                </section>
+                <section class="card">
                     <div class="card-container">
-                        <img src="./assets/samuel-zeller-113381.jpg" alt="">
+                        <img src="./assets/samuel-zeller-113381.jpg" alt="Image of a human anatomy figure">
                     </div>
                     <h3>Biology & Medicine</h3>
                     <a href="#" class="cta-button">Go to exhibitions</a>
-                </article>
-                <article class="card">
+                </section>
+                <section class="card">
                     <div class="card-container">
-                        <img src="./assets/william-bout-264826.jpg" alt="">
+                        <img src="./assets/william-bout-264826.jpg" alt="Image of an art exhibition illustrating a network">
                     </div>
                     <h3>Robotics & AI</h3>
                     <a href="#" class="cta-button">Go to exhibitions</a>
-                </article>
-                <article class="card">
+                </section>
+                <section class="card">
                     <div class="card-container">
-                        <img src="./assets/open-science-735787.jpg" alt="">
+                        <img src="./assets/open-science-735787.jpg" alt="Logo of earth with a keyhole and galaxies around.">
                     </div>
                     <h3>Ecology</h3>
                     <a href="#" class="cta-button">Go to exhibitions</a>
-                </article>
-            </section>
+                </section>
+            </div>
 
             <section class="visit">
                 <h2>Visit</h2>
@@ -148,13 +146,11 @@
                 <p>Kjelsåsveien 14</p>
                 <p>30491 Oslo</p>
                 <div class="map-container">
-                    <img src="./assets/Skjermbilde 2024-11-22 kl. 19.39.20.png" alt="" class="map-container-img">
+                    <img src="./assets/Skjermbilde 2024-11-22 kl. 19.39.20.png" alt="Image of a map viewing the museum" class="map-container-img">
                 </div>    
             </section>
-           
         </main>
        
-        <!--Style footer-->
         <footer>
             <a href="about.html">About</a>
             <a href="contact-us.html">Send us a message</a>
