Added interactive google map

--- a/index.html
+++ b/index.html
@@ -143,11 +143,13 @@
                 <p>Saturday: 9:00 - 16:00</p>
                 <p>Sunday: 9:00 - 13:00</p>
                 <h3>Location</h3>
-                <p>Kjelsåsveien 14</p>
-                <p>30491 Oslo</p>
+                <p>Mølleparken 4</p>
+                <p>0459 Oslo</p>
                 <div class="map-container">
-                    <img src="./assets/Skjermbilde 2024-11-22 kl. 19.39.20.png" alt="Image of a map viewing the museum" class="map-container-img">
-                </div>    
+                    <div class="map-container-img">
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3998.2676459758727!2d10.753383777021861!3d59.92992156280231!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46416e625bebdd55%3A0x87598940160b87fa!2sNoroff%20Oslo!5e0!3m2!1sno!2sno!4v1733308576312!5m2!1sno!2sno" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                    </div>
+                </div>  
             </section>
         </main>
        
