--- a/visit.html
+++ b/visit.html
@@ -80,11 +80,14 @@
            <section class="info">
                 <h2>Location</h2>
                 <p>The museum is located at:</p>
-                <p>Kjelsåsveien 143, 0491 Oslo</p>
+                <p>Mølleparken 4, 0459 Oslo</p>
                 <div class="card">
-                    <img src="./assets/Skjermbilde 2024-11-22 kl. 19.39.20.png" alt="Image of a map showing the museum">
+                    <div class="card-container">
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3998.2676459758727!2d10.753383777021861!3d59.92992156280231!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46416e625bebdd55%3A0x87598940160b87fa!2sNoroff%20Oslo!5e0!3m2!1sno!2sno!4v1733308576312!5m2!1sno!2sno" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                    </div>
                 </div>
-           </section>
+                
+            </section>
         </main>
        
         <footer>
