Added links to cta buttons

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                     <span>museum</span>
                 </h1>  
             </section>
-            <a href="#" class="cta-button__header">Go to events</a>
+            <a href="events.html" class="cta-button__header">Go to events</a>
 
             <h2>Special events</h2>
             <div class="scroll-container">
@@ -53,21 +53,21 @@
                         <img src="./assets/roberto-nickson-396152.jpg" alt="Image of a mammut in a museum">
                     </div>
                     <h3>Night at the museum</h3>
-                    <a href="#" class="cta-button">Go to events</a>
+                    <a href="events.html" class="cta-button">Go to events</a>
                 </section>
                 <section class="card">
                     <div class="card-container">
                         <img src="./assets/scientific-2040795_1280.jpg" alt="Image of a scientist looking at a reactor">
                     </div>
                     <h3>Energetica exhibitions</h3>
-                    <a href="#" class="cta-button">Go to events</a>
+                    <a href="events.html" class="cta-button">Go to events</a>
                 </section>
                 <section class="card">
                     <div class="card-container">
                         <img src="./assets/celso-405219.jpg" alt="Image of the moon">
                     </div>
                     <h3>Professor of Aeronautics</h3>
-                    <a href="#" class="cta-button">Go to events</a>
+                    <a href="events.html" class="cta-button">Go to events</a>
                 </section>
             </div>
 
@@ -77,19 +77,19 @@
                     <div class="explore-card-container">
                         <img src="./assets/DALL-E-2024-11-23-09.08.33.webp" alt="wo children at a museum, exploring exhibits with curiosity and joy. One child is pointing at a dinosaur skeleton while the other looks amazed.">
                     </div>
-                    <a href="#" class="cta-button">Kids</a>
+                    <a href="explore.html" class="cta-button">Kids</a>
                 </section>
                 <section class="explore-card">
                     <div class="explore-card-container">
                         <img src="./assets/DALL-E-2024-11-23-09.14.09.webp" alt="A museum scene featuring a teacher guiding a group of children on a field trip. The teacher, an enthusiastic adult, is explaining an exhibit">
                     </div>
-                    <a href="#" class="cta-button">Teachers</a>
+                    <a href="explore.html" class="cta-button">Teachers</a>
                 </section>
                 <section class="explore-card">
                     <div class="explore-card-container">
                         <img src="./assets/mavis-cw-164128.jpg" alt="Image of a museum hall with study desks">
                     </div>
-                    <a href="#" class="cta-button">Researchers</a>
+                    <a href="explore.html" class="cta-button">Researchers</a>
                 </section>
             </section>
 
@@ -100,35 +100,35 @@
                         <img src="./assets/toa-heftiba-412579.jpg" alt="Image of a dinosaur skeleton in a big museum hall">
                     </div>
                     <h3>Evolution</h3>
-                    <a href="#" class="cta-button">Go to exhibitions</a>
+                    <a href="exhibitions.html" class="cta-button">Go to exhibitions</a>
                 </section>
                 <section class="card">
                     <div class="card-container">
                         <img src="./assets/andrew-ruiz-348421.jpg" alt="Image of an astronaut in a spaceship">
                     </div>
                     <h3>Cosmology</h3>
-                    <a href="#" class="cta-button">Go to exhibitions</a>
+                    <a href="exhibitions.html" class="cta-button">Go to exhibitions</a>
                 </section>
                 <section class="card">
                     <div class="card-container">
                         <img src="./assets/samuel-zeller-113381.jpg" alt="Image of a human anatomy figure">
                     </div>
                     <h3>Biology & Medicine</h3>
-                    <a href="#" class="cta-button">Go to exhibitions</a>
+                    <a href="exhibitions.html" class="cta-button">Go to exhibitions</a>
                 </section>
                 <section class="card">
                     <div class="card-container">
                         <img src="./assets/william-bout-264826.jpg" alt="Image of an art exhibition illustrating a network">
                     </div>
                     <h3>Robotics & AI</h3>
-                    <a href="#" class="cta-button">Go to exhibitions</a>
+                    <a href="exhibitions.html" class="cta-button">Go to exhibitions</a>
                 </section>
                 <section class="card">
                     <div class="card-container">
                         <img src="./assets/open-science-735787.jpg" alt="Logo of earth with a keyhole and galaxies around.">
                     </div>
                     <h3>Ecology</h3>
-                    <a href="#" class="cta-button">Go to exhibitions</a>
+                    <a href="exhibitions.html" class="cta-button">Go to exhibitions</a>
                 </section>
             </div>
 
