--- a/order-summary.html
+++ b/order-summary.html
@@ -86,7 +86,7 @@
                     </tr>
                 </thead>
             </table>
-            <a href="" class="cta-button">Go to exhibitions</a>
+            <a href="exhibitions.html" class="cta-button">Go to exhibitions</a>
         </main>
        
         <footer>
