--- a/events.html
+++ b/events.html
@@ -44,7 +44,7 @@
                 </div>
                 <h2>Night in the museum</h2>
                 <p>Get your family together for an exciting night in the museum as you sleep over beside dinosaurs and science displays. Bring your own sleeping bag and get ready to rough it as we go exploring the wonders of science.</p>
-                <a href="" class="cta-button">Buy tickets</a>
+                <a href="tickets.html" class="cta-button">Buy tickets</a>
             </section>
             <section>
                 <h2>Whats happening this week - 50</h2>
@@ -55,7 +55,7 @@
                         <img src="./assets/celso-405219.jpg" alt="Image of the moon">
                     </div>
                     <p>It is our pleasure to announce that Prof Sheila Widnall from the Massachusetts Institute of Technology will be delivering 3 lectures on the development of aeronautics and where the future lies in this exciting ‘space’.</p>
-                    <a href="" class="cta-button">Buy tickets</a>
+                    <a href="tickets.html" class="cta-button">Buy tickets</a>
                 </section>
                 <section class="card">
                     <h3>Sunday</h3>
@@ -64,7 +64,7 @@
                         <img src="./assets/scientific-2040795_1280.jpg" alt="Image of a scientist looking at a reactor">
                     </div>
                     <p>On loan from the NEMO Science Museum in Amsterdam, the Energetica exhibition is coming to the Community Science Museum. It’s a series of installations that allow visitors to experience the power of the elements as we harness them. From solar energy powering lighting, to ‘Wind Island’ that shows how turbines are able to use and control wind to create power.</p>
-                    <a href="" class="cta-button">Buy tickets</a>
+                    <a href="tickets.html" class="cta-button">Buy tickets</a>
                 </section>
             </section>
         </main>
