--- a/explore.html
+++ b/explore.html
@@ -47,17 +47,17 @@
                     <h3>Are you a young person looking to learn more about science? </h3>
                     <p>Come on down to our museum, there's plenty to see and do.</p>
                     <p>You can learn about Newtonian physics from our bumper swing, or why not travel back in time and meet our resident Woolly Mammoth? Our exhibits are designed to be accessible for interested minds, so make sure you come ready to learn and explore.</p>
-                    <a href="" class="cta-button">Go to exhibitions</a>
+                    <a href="exhibitions.html" class="cta-button">Go to exhibitions</a>
                 </section>
                 <section class="card">
                     <h3>Young Stars club on Saturdays</h3>
                     <p>We also have the Young Stars club which meets once a week on a Saturday between 10:00 and 13:00 where you'll get to explore and experiment with our team of experts.</p>
-                    <a href="" class="cta-button">Visit us</a>
+                    <a href="visit.html" class="cta-button">Visit us</a>
                 </section>
                 <section class="card">
                     <h3>Holiday clubs</h3>
                     <p>During the school holidays we run special holiday clubs where you can join other children your age to go on a journey of discovery. Each holiday we pick a new theme to explore. To find out more about the holiday club and how you can join, send us a message.</p>
-                    <a href="" class="cta-button">Contact us</a>
+                    <a href="contact-us.html" class="cta-button">Contact us</a>
                 </section>
             </section>
             <section>
@@ -65,7 +65,7 @@
                 <section class="card">
                     <p>As a community-driven museum, we want to work with schools to create places of learning and exploring. Our team are on hand to give your students guided tours of the museum, teach them in our learning laboratory, and provide great video presentations that will excite and inspire them.</p>
                     <p>Please get in touch with us here to find out more about our facilities and to arrange a time to bring your students through for a visit.</p>
-                    <a href="" class="cta-button">Contact us</a>
+                    <a href="contact-us.html" class="cta-button">Contact us</a>
                 </section>
            </section>
            <section>
@@ -75,7 +75,7 @@
                         <img src="./assets/scientific-2040795_1280.jpg" alt="Image of a scientist looking at a reactor">
                     </div>
                     <p>Are you looking to get involved with our team of researchers and academics? Our museum offers various ways for you to use our resources and contribute towards them. We have online records, laboratory space, and a working relationship with a number of universities around the country.</p>
-                    <a href="" class="cta-button">Contact us</a>
+                    <a href="contact-us.html" class="cta-button">Contact us</a>
                 </section>
            </section>
         </main>
