--- a/tickets.html
+++ b/tickets.html
@@ -84,7 +84,7 @@
                         </tr>
                     </tbody>
                 </table>
-                <a href="" class="cta-button">Buy tickets</a>
+                <a href="cart.html" class="cta-button">Buy tickets</a>
             </section>
             <Section>
                 <h2>Book special events</h2>
@@ -138,7 +138,7 @@
                             </tr>
                         </tbody>
                     </table>
-                    <a href="" class="cta-button">Buy tickets</a>
+                    <a href="cart.html" class="cta-button">Buy tickets</a>
                 </section>
                 <section class="card">
                     <div class="card-container">
@@ -190,7 +190,7 @@
                             </tr>
                         </tbody>
                     </table>
-                    <a href="" class="cta-button">Buy tickets</a>
+                    <a href="cart.html" class="cta-button">Buy tickets</a>
                 </section>
                 <section class="card">
                     <div class="card-container">
@@ -242,7 +242,7 @@
                             </tr>
                         </tbody>
                     </table>
-                    <a href="" class="cta-button">Buy tickets</a>
+                    <a href="cart.html" class="cta-button">Buy tickets</a>
                 </section>
             </Section>
         </main>
