--- a/visit.html
+++ b/visit.html
@@ -61,9 +61,9 @@
                     <img src="./assets/exhibition-1863344_1920.jpg" alt="Image of a museum hall with exhibitions">
                 </div>
                 <p>There are guided tours of the museum that leave every hour. These tours are 70 NOK per person and include a handy printed guide of the museum.</p>
-                <a href="" class="cta-button">Buy tickets</a>
+                <a href="tickets.html" class="cta-button">Buy tickets</a>
                 <p>If you would like to organise a guided tour for your group of 6 or more people, please contact us to arrange the tour.</p>
-                <a href="" class="cta-button">Contact us</a>
+                <a href="contact-us.html" class="cta-button">Contact us</a>
            </section>
            <section class="info">
                 <h2>Accessibility</h2>
